# var_view

./: AGENTS.md  MANIFEST.in  NOTES.md  README.md  main.py  pyproject.toml  variableExporter.py
.github/workflows/: test.yml
src/: main.py  variable_exporter.py  variable_viewer.py  variables.py
src/app/: variableExporter.py
src/plugins/: numpy_plugin.py  opencv_plugin.py  torch_plugin.py
test/: test_variable_exporter.py
tests/: conftest.py  test_drag.py  test_model.py  test_paginated_viewer.py  test_variable_exporter.py  test_viewer.py
var_view/: __init__.py  main.py  plugin_base.py  plugin_manager.py  variable_exporter.py  variable_viewer.py
var_view/built_in_plugins/: numpy_plugin.py  opencv_plugin.py  torch_plugin.py
var_view/plugins/: __init__.py  numpy_plugin.py  opencv_plugin.py  torch_plugin.py
var_view/variable_viewer/: __init__.py  console.py  model.py  paginated_viewer.py  utils.py  viewer.py
variable_viewer/: __init__.py  model.py  viewer.py
