[project]
name = "var-view"
version = "0.1.0"
description = "A PyQt-based variable viewer for exploring Python objects interactively."
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "PyQt6>=6.5.1",
    "numpy>=1.24.0",
    "torch>=2.0.0",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu124", marker = "platform_system != 'Darwin'"},
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true