[project]
name = "var-view"
version = "0.1.0"
description = "A PyQt-based variable viewer for exploring Python objects interactively."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PyQt6>=6.5.1",
    "h5py>=3.12.1",
    "hdf5storage>=0.1.19",
    "numpy<2.0.0",
    "pillow>=11.0.0",
    "scipy>=1.14.1",
    "torch>=2.0.0",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu124", marker = "platform_system != 'Darwin'"},
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
