[project]
name = "var-view"
version = "0.3.0"
description = "A PyQt-based variable viewer for exploring Python objects interactively."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PyQt6>=6.5.1",
    "h5py>=3.12.1",
    "hdf5storage>=0.1.19",
    "ipykernel>=6.29.5",
    "jupyter-client>=8.6.3",
    "jupyter-core>=5.7.2",
    "pillow>=11.0.0",
    "qtconsole>=5.6.1",
    "scipy>=1.14.1",
]

[dependency-groups]
dev = [
    "torch>=2.0.0",
    "pytest >=8.1",
    "pytest-mock>=3.14.0",
    "pytest-qt>=4.4.0",
    "numpy<2.0.0",
    "opencv-python>=4.10.0.84",
    "pytest-cov>=6.0.0",
    "pyautogui>=0.9.54",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu124", marker = "platform_system != 'Darwin'"},
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[project.entry-points."var_view.built_in_plugins"]
opencv = "var_view.built_in_plugins.opencv_plugin:OpenCVPlugin"
torch = "var_view.built_in_plugins.torch_plugin:TorchPlugin"
#numpy = "var_view.built_in_plugins.numpy_plugin:NumpyPlugin"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
